RESOLVED FIXED233413
[MSVC] IPC\DaemonConnection.h(80): warning C4661: 'void WebKit::Daemon::ConnectionToMachService<WebKit::PCM::ConnectionTraits>::initializeConnectionIfNeeded(void) const': no suitable definition provided for explicit template instantiation request
https://bugs.webkit.org/show_bug.cgi?id=233413
Summary [MSVC] IPC\DaemonConnection.h(80): warning C4661: 'void WebKit::Daemon::Conne...
Fujii Hironori
Reported 2021-11-21 21:52:28 PST
[MSVC] IPC\DaemonConnection.h(80): warning C4661: 'void WebKit::Daemon::ConnectionToMachService<WebKit::PCM::ConnectionTraits>::initializeConnectionIfNeeded(void) const': no suitable definition provided for explicit template instantiation request WinCairo build reports the following warnings. > Source\WebKit\Platform\IPC\DaemonConnection.h(80): warning C4661: 'void WebKit::Daemon::ConnectionToMachService<WebKit::PCM::ConnectionTraits>::initializeConnectionIfNeeded(void) const': no suitable definition provided for explicit template instantiation request > Source\WebKit\Platform\IPC\DaemonConnection.h(77): note: see declaration of 'WebKit::Daemon::ConnectionToMachService<WebKit::PCM::ConnectionTraits>::initializeConnectionIfNeeded' > Source\WebKit\Platform/IPC/DaemonConnection.cpp(40): warning C4661: 'void WebKit::Daemon::ConnectionToMachService<WebKit::PCM::ConnectionTraits>::initializeConnectionIfNeeded(void) const': no suitable definition provided for explicit template instantiation request > Source\WebKit\Platform\IPC\DaemonConnection.h(77): note: see declaration of 'WebKit::Daemon::ConnectionToMachService<WebKit::PCM::ConnectionTraits>::initializeConnectionIfNeeded'
Attachments
Patch (2.50 KB, patch)
2021-11-21 21:54 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2021-11-21 21:54:42 PST
EWS
Comment 2 2021-11-22 15:24:05 PST
Committed r286120 (244507@main): <https://commits.webkit.org/244507@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 444944 [details].
Radar WebKit Bug Importer
Comment 3 2021-11-22 15:25:23 PST
Note You need to log in before you can comment on or make changes to this bug.